# center_of_mass

./: .gitignore  .readthedocs.yaml  AUTHOR.md  README.md  pyproject.toml  readthedocs_requirements.txt
documentation/: CenterOfMass_estimator_explanation.ipynb  CenterOfMass_estimator_tutorial.ipynb  index.rst  kinematic_CenterOfMass_example.ipynb  kinematic_CenterOfMass_explanation.ipynb  kinematic_CenterOfMass_tutorial.ipynb
examples/: center_of_mass_estimator_example.py  center_of_mass_kinematics_example.py  example_data.mat  example_data.pkl  matlab_estimator_example.m
src-matlab/: com_acceleration.m  estimator.m  estimator_backandforth.m  estimator_gains.m  initial_conditions.m  optimal_combination.m  subsample_one_signal.m  subsample_two_signals.m  visualise.m
src/center_of_mass/: estimator.py
validation/: README.md  data_analysis.py  functions.py  preprocessing.py  results_and_figures.py
validation/data/raw/A/: 8-RawForce.mat
validation/data/raw/B/: 8-RawForce.mat
