[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "center_of_mass"
authors = [{name = "Charlotte Le Mouel", email = "charlotte.lemouel@normale.fr"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
documentation = ["sphinx","nbsphinx","numpydoc","sphinx-rtd-theme","myst-parser","ipython"]
tutorials     = ["matplotlib","jupyter"]

[project.urls]